# ICRA16_Experiments

./: README.md
edge_map_bag/: CMakeLists.txt  package.xml
edge_map_bag/src/: main.cpp
icra_start/: CMakeLists.txt  package.xml
icra_start/launch/: amcl_icra.launch  experiment.launch  icra_movebase.launch  icra_nav.launch  iros_gmapping.launch  iros_mapstitch.launch  iros_movebase.launch  iros_nav_tets.launch  uol_bl_nav2d.launch
icra_start/scripts/: edge_mapping.sh  edge_patroller.py  mapping.sh  patroller.py  robot_start.sh  sim_icra_start.sh  sticht_them.sh
icra_utils/: CMakeLists.txt  package.xml
icra_utils/scripts/: stitch_maps.py
predicted_maps_utils/scripts/: create_routes.py  extract_day_info.sh  mapping.sh
